# mtg-deck-data

./: README.md  environment.yml  pyproject.toml
mtg_deck_data/data/: aetherhub_decks.parquet  mtg_decks.parquet  mtg_decks_top_cards.csv  mtga_user_decks.parquet
mtg_deck_data/src/: aetherhub_decks.py  mtg_decks.py  mtg_decks_top_cards.py  mtga_user_decks.py
